# cardgame

./: .gitignore  Cargo.toml  README.md  RESULTS.md  pyproject.toml
model-py/: benchmark.py  conftest.py  requirements.txt  test_benchmark.py
src/: common.rs  lib.rs  main.rs
src/common/: models.rs  snapshot.rs
